Move part of the code from the old repository
Co-Authored-By: sector-a <82838084+sector-a@users.noreply.github.com>
Co-Authored-By: mcagabe19 <egzozu.be.bas@gmail.com>
Co-Authored-By: Mihai Alexandru <77043862+majigsaw77@users.noreply.github.com>
Co-Authored-By: MoonDroid <81515012+moondroidcoder@users.noreply.github.com>
Co-Authored-By: luckydog7 <59097731+luckydog7@users.noreply.github.com>

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -26,6 +26,9 @@ body:
         - Itch.io (Downloadable Build) - Windows
         - Itch.io (Downloadable Build) - MacOS
         - Itch.io (Downloadable Build) - Linux
+        - Unofficial - Android
+        - Unofficial - iOS
+        - Unofficial - Web
         - Compiled from GitHub Source Code
     validations:
       required: true
