--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,8 @@
   "haxecheckstyle.configurationFile": "checkstyle.json",
   "haxecheckstyle.codeSimilarityBufferSize": 100,
 
+  "lime.projectFile": "project.hxp",
+
   "lime.targetConfigurations": [
     {
       "label": "Windows / Debug (Discord)",
@@ -158,7 +160,7 @@
     {
       "label": "Windows / Debug (Debug hxvlc)",
       "target": "windows",
-      "args": ["-debug", "-DHXC_LIBVLC_LOGGING", "-DFEATURE_DEBUG_FUNCTIONS"]
+      "args": ["-debug", "-DHXVLC_LOGGING", "-DFEATURE_DEBUG_FUNCTIONS"]
     },
     {
       "label": "HashLink / Debug (Straight to Animation Editor)",
@@ -225,5 +227,6 @@
     "coverage.xml",
     "jacoco.xml",
     "coverage.cobertura.xml"
-  ]
+  ],
+  "vscord.app.privacyMode.enable": true
 }
