hotfix(ci): for now, disable fail-fast so we can get some windows builds

--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -118,6 +118,7 @@ jobs:
 
   build-game-on-host:
     strategy:
+      fail-fast: false
       matrix:
         include:
           - target: windows
