hotfix(ci): use our own runners again :)

--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -122,7 +122,7 @@ jobs:
       matrix:
         include:
           - target: windows
-            runs-on: windows-latest
+            runs-on: windows
           - target: macos
             runs-on: macos
     runs-on:
