--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -25,9 +25,8 @@ body:
         - Itch.io (Downloadable Build) - Windows
         - Itch.io (Downloadable Build) - MacOS
         - Itch.io (Downloadable Build) - Linux
-        - Unofficial - Android
-        - Unofficial - iOS
-        - Unofficial - Web
+        - Google Playstore - Android
+        - App Store - iOS
         - Compiled from GitHub Source Code
     validations:
       required: true
