--- a/.github/changed-lines-count-labeler.yml
+++ b/.github/changed-lines-count-labeler.yml
@@ -1,22 +1,12 @@
-# Add 'size: tiny' to any changes of at most 4 lines
-'size: tiny':
-  max: 4
-
-# Add 'size: small' to any changes between 5 and 10 lines
+# Add 'size: small' to any changes below 10 lines
 'size: small':
-  min: 5
-  max: 10
+  max: 9
 
-# Add 'size: medium' to any changes between 11 and 100 lines
+# Add 'size: medium' to any changes between 10 and 100 lines
 'size: medium':
-  min: 11
-  max: 100
+  min: 10
+  max: 99
 
-# Add 'size: large' to any changes between 101 and 500 lines
+# Add 'size: large' to any changes of at least 100 lines
 'size: large':
-  min: 101
-  max: 500
-
-# Add 'size: huge' to any changes of more than 500 lines
-'size: huge':
-  min: 501
+  min: 100
