--- a/.github/workflows/cancel-merged-branches.yml
+++ b/.github/workflows/cancel-merged-branches.yml
@@ -26,7 +26,7 @@ jobs:
           let branch_workflows = await github.rest.actions.listWorkflowRuns({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            workflow_id: "build-shit.yml",
+            workflow_id: "build-game.yml",
             status: "queued",
             branch: "${{ github.event.pull_request.head.ref }}"
           });
