--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -128,6 +128,8 @@ jobs:
             runs-on: windows
           - target: macos
             runs-on: macos
+          - target: ios
+            runs-on: macos
     runs-on:
       - ${{ matrix.runs-on }}
     defaults:
@@ -196,6 +198,7 @@ jobs:
         include:
           - target: linux
           - target: html5
+          - target: android
     defaults:
       run:
         shell: bash
