Update Lime submodule to fix Github Actions build issues (#1226)
* Update Lime submodule to fix build issues

* Disable automatic iOS builds in Github Actions until we fix build issues

--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -128,8 +128,9 @@ jobs:
             runs-on: windows
           - target: macos
             runs-on: macos
-          - target: ios
-            runs-on: macos
+          # TODO: Install XCode to build iOS
+          # - target: ios
+          #   runs-on: macos
     runs-on:
       - ${{ matrix.runs-on }}
     defaults:
