--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "assets"]
 	path = assets
-	url = https://github.com/FunkinCrew/Funkin.assets
+	url = https://github.com/sphis-sinco/Funkin.assets
+	branch = feature/cutscene-toggle
 [submodule "art"]
 	path = art
 	url = https://github.com/FunkinCrew/Funkin.art
