--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
 [submodule "assets"]
 	path = assets
-	url = https://github.com/sphis-sinco/Funkin.assets
-	branch = feature/cutscene-toggle
+	url = https://github.com/FunkinCrew/Funkin.assets
 [submodule "art"]
 	path = art
 	url = https://github.com/FunkinCrew/Funkin.art
