Update issue templates for Mobile

--- a/.github/ISSUE_TEMPLATE/charting.yml
+++ b/.github/ISSUE_TEMPLATE/charting.yml
@@ -21,26 +21,16 @@ body:
       label: Platform
       description: Which platform are you playing on?
       options:
+        - Android
+        - iOS/iPadOS
         - Newgrounds (Web/HTML5)
         - Itch.io (Web/HTML5)
-        - Itch.io (Downloadable Build) - Windows
-        - Itch.io (Downloadable Build) - MacOS
-        - Itch.io (Downloadable Build) - Linux
+        - Windows (Downloadable Build)
+        - MacOS (Downloadable Build)
+        - Linux (Downloadable Build)
         - Compiled from GitHub Source Code
     validations:
       required: true
-
-  - type: dropdown
-    attributes:
-      label: Browser
-      description: (Web/HTML5 users only) Which browser are you playing on?
-      options:
-        - Google Chrome
-        - Microsoft Edge
-        - Firefox
-        - Opera
-        - Safari
-        - Other (Specify in Description field)
 
   - type: input
     attributes:
