Add `MemoryUtil` for Apple external.

--- a/source/funkin/external/apple/project/Build.xml
+++ b/source/funkin/external/apple/project/Build.xml
@@ -13,8 +13,9 @@
 	<files id="external-apple">
 		<compilerflag value="-I${this_dir}/include" />
 
-		<file name="${this_dir}/src/ScreenUtil.mm" />
 		<file name="${this_dir}/src/AudioSession.mm" />
+		<file name="${this_dir}/src/MemoryUtil.mm" />
+		<file name="${this_dir}/src/ScreenUtil.mm" />
 	</files>
 
 	<target id="haxe">
