Fix macos compile.
Co-Authored-By: MoonDroid <81515012+moondroidcoder@users.noreply.github.com>

--- a/source/funkin/external/apple/project/Build.xml
+++ b/source/funkin/external/apple/project/Build.xml
@@ -19,7 +19,7 @@
 	</files>
 
 	<target id="haxe">
-		<vflag name="-framework" value="UIKit" />
+		<vflag name="-framework" value="UIKit" unless="macos" />
 		<vflag name="-framework" value="Foundation" />
 		<vflag name="-framework" value="AVFAudio" />
 
