Huge chunk of the iOS implementation

--- a/source/funkin/external/apple/project/Build.xml
+++ b/source/funkin/external/apple/project/Build.xml
@@ -16,6 +16,7 @@
 		<file name="${this_dir}/src/AudioSession.mm" />
 		<file name="${this_dir}/src/MemoryUtil.mm" />
 		<file name="${this_dir}/src/ScreenUtil.mm" />
+		<file name="${this_dir}/src/FNFCUtil.mm" />
 	</files>
 
 	<target id="haxe">
