Exclude all *.iml files instead of just Funkin and unit

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,7 @@ NewgroundsCredentials.hx
 
 # Exclude IntelliJ IDEA stuff
 .idea/
-Funkin.iml
-tests/unit/unit.iml
+*.iml
 
 # Mobile signing stuff
 .apple/
